--- a/scss/pages.scss
+++ b/scss/pages.scss
@@ -1,5 +1,5 @@
 @mixin bp($point) {
-  
+
   $bp-tablet: '(min-width: 640px)';
   $bp-desktop: '(min-width: 1024px)';
   $bp-lg-desktop: '(min-width: 1600px)';
@@ -29,6 +29,7 @@ html,body {
 }
 
 body {
+
   h1 {
     font-size: 3em;
     margin-top: 0;
@@ -36,7 +37,7 @@ body {
   h2 {
     font-size: 1.4em;
   }
-  
+
   input,
   input:hover,
   input:focus {
@@ -44,7 +45,7 @@ body {
     box-shadow: none;
     outline-width: 0;
   }
-  
+
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -57,10 +58,10 @@ a.shire-logo {
   bottom: 30px;
   right: 30px;
   z-index: 7;
-  
+
   img {
     width: 40px;
-    
+
     @include bp(tablet){
       width: 70px;
     }
@@ -75,11 +76,11 @@ a.shire-logo {
   position: relative;
   color: white;
   padding: 80px 30px 40px 30px;
-  
+
   @include bp(tablet){
     padding: 110px 20% 100px 20%;
   }
-  
+
   a.exit {
     position: absolute;
     right: 30px;
@@ -90,7 +91,7 @@ a.shire-logo {
       width: 100%;
       height: 100%;
     }
-    
+
     @include bp(tablet){
       right: 50px;
       top: 50px;
@@ -116,7 +117,7 @@ main {
   min-height: 100%;
   float: left;
   font-family: 'filson-soft', sans-serif;
-  
+
   a {
     &:hover,
     &:visited,
@@ -130,19 +131,19 @@ main {
 }
 
 [data-page='home']{
-  
+
   a.cyl-btn {
     padding: 12px 32px;
     border-radius: 4px 4px;
     display: block;
     float: left;
-    
+
     &.next {
       background-color: #FF7175;
       color: white;
       position: relative;
       padding: 12px 42px 12px 32px;
-      
+
       &:after {
         content: '';
         background-image: url('/assets/svg/btn-arrow.svg' );
@@ -156,15 +157,53 @@ main {
         background-position: center center;
       }
     }
-    
+
     &.invert {
       background-color: white;
       color: #FF7175;
     }
   }
-  
+
+  footer {
+    color: white;
+    font-size: .5em;
+    float: left;
+    background-color: #535352;
+    padding: 30px;
+    line-height: 1.8em;
+    display: none;
+    color: #ddd;
+    width: 100%;
+
+    a {
+      color: white;
+
+      &:visited,
+      &:hover {
+        color: white;
+      }
+
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    img {
+      margin-top: 24px;
+      height: 20px;
+    }
+
+    @include bp(tablet){
+      font-size: .65em;
+
+      img {
+        height: 34px;
+      }
+    }
+  }
+
   section[data-view] {
     height: 100%;
+    min-height: 100vh;
     float: left;
     //background-color: #FFE6D8;
     float: left;
@@ -175,39 +214,40 @@ main {
     padding-top: 40px;
     width: 100%;
     padding-bottom: 40px;
+    position: relative;
     //position: relative;
-    
+
     a.shire-logo {
       position: absolute;
     }
-    
+
     [data-state]{
       display: none;
       width: 100%;
       min-height: 100%;
     }
-    
+
     @include bp(tablet){
       padding: 50px;
       padding-top: 70px;
     }
-    
+
     text-align: center;
-    
+
     .inner {
       display: inline-block;
       width: 100%;
       max-width: 900px;
       text-align: left;
     }
-    
+
     .title,
     .content,
     .cta {
       width: 100%;
       float: left;
       margin-bottom: 12px;
-      
+
       &.centered {
         text-align: center;
         a.cyl-btn {
@@ -216,21 +256,21 @@ main {
         }
       }
     }
-    
+
     .title {
       h1 {
-        
+
       }
     }
-    
+
     .content {
       p {
         color: #FF7175;
       }
-      
+
       .choices {
-        
-        
+
+
         div[class*='col-']{
           margin-left: 0;
           padding-left: 0;
@@ -238,7 +278,7 @@ main {
           margin-right: 0;
           float: left;
         }
-        
+
         @include bp(tablet){
           div[class*='col-']{
             margin-left: 0;
@@ -246,7 +286,7 @@ main {
             float: left;
           }
         }
-        
+
         div[type='checkbox']{
           border: 1px solid black;
           padding: 15px 14px 14px 50px;
@@ -257,44 +297,44 @@ main {
           color: black;
           font-size: .9em;
           float: left;
-          
+
           &.fullw {
             width: 100%;
           }
-          
+
           @include bp(tablet){
             font-size: 1.3em;
             padding: 15px 14px 14px 60px;
           }
-          
+
           &.tall {
             height: 70px;
             padding-top: 12px;
             line-height: 1.2em;
-            
+
             span {
               font-size: .5em;
               position: relative;
               top: -2px;
               text-transform: uppercase;
-              
+
               @include bp(tablet){
                 font-size: .8em;
               }
             }
-            
+
             @include bp(tablet){
               height: 86px;
               padding-top: 18px;
               line-height: 1.35em;
             }
           }
-          
+
           a {
             color: black;
             text-decoration: underline;
           }
-          
+
           &:before {
             content: "";
             display: block;
@@ -307,7 +347,7 @@ main {
             border: 1px solid black;
             border-radius: 50% 50%;
           }
-          
+
           &[selected]{
             background-color: white;
             border: 1px solid white;
@@ -319,36 +359,36 @@ main {
               background-position: center center;
             }
           }
-          
+
           &:hover {
             background-color: white;
             border: 1px solid white;
             box-shadow: 4px 4px rgba(0,0,0,.05);
             cursor: pointer;
           }
-          
+
         } /* div[type='checkbox'] */
-        
-        
+
+
       }
     }
-    
+
     &[data-view='questions-day']{
       img.clock {
         position: absolute;
         right: 40px;
       }
     }
-    
+
     &[data-view='questions-thanks']{
       p.confidential {
         font-size: .48em;
-        
+
         @include bp(tablet){
           font-size: .68em;
         }
       }
-      
+
       ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         color: #FF7175;
       }
@@ -358,15 +398,15 @@ main {
       :-ms-input-placeholder { /* IE 10+ */
         color: #FF7175;
       }
-      
+
       :-moz-placeholder { /* Firefox 18- */
         color: #FF7175;
       }
-      
+
       .cta {
         margin-top: 10px;
       }
-      
+
       input[name='email'] {
         width: 100%;
         height: 46px;
@@ -377,22 +417,30 @@ main {
         padding-left: 20px;
         font-size: 1.4em;
         color: #FF7175;
-        
-        
+
+
         @include bp(tablet){
           height: 60px;
         }
       }
     }
-    
+
   } /* section[data-view] */
-  
-  
+
+
   &[data-show-view='cyl-complete']{
+    a.shire-logo {
+      display: none;
+    }
+
     section[data-view='cyl-complete']{
       display: block;
       padding-top: 18vh;
-      
+
+      a.shire-logo {
+        display: block;
+      }
+
       .inner {
         text-align: center;
         h1 {
@@ -413,10 +461,10 @@ main {
           }
         }
       }
-      
+
       @include bp(tablet){
         padding-top: 22vh;
-        
+
         .inner{
           h1 {
             font-size: 4em;
@@ -431,7 +479,7 @@ main {
             display: inline-block;
             margin-top: 4px;
           }
-          
+
           .cta {
             margin-top: 10px;
             a {
@@ -440,255 +488,341 @@ main {
           }
         }
       }
-      
+
     }
   }
-  
+
   &[data-show-view='splash']{
+    a.shire-logo {
+      display: none;
+    }
+
     section[data-view='splash']{
       display: block;
       text-align: center;
       padding-top: 12vh;
-      
+
+      a.shire-logo {
+        display: block;
+      }
+
       p {
         color: black;
         font-size: 1.2em;
         line-height: 1.7em;
         margin-top: 20px;
       }
-      
+
       a.cyl-btn {
         width: 94%;
         //box-shadow: 0 2px 6px 6px rgba(0,0,0,.05);
       }
-      
-      img {
+
+      .title img {
         width: 80%;
         display: inline-block;
         margin-bottom: -10px;
       }
-      
+
       @include bp(tablet){
-        
+
         padding-top: 17vh;
-        
-        img {
+
+        .title img {
           width: 46%;
         }
-        
+
         p {
           font-size: 1.6em;
           line-height: 1.8em;
         }
-        
+
         a.cyl-btn {
           margin-top: 20px;
           width: auto;
         }
-        
+
       }
-      
+
     }
   }
-  
+
   &[data-show-view='questions-about']{
     a.shire-logo {
       display: none;
     }
-    
+
     section[data-view='questions-about']{
       display: block;
       a.shire-logo {
         display: block;
       }
-      
+
       .content .choices div[type='checkbox'] {
         @include bp(tablet){
           width: calc(100% - 20px);
         }
       }
-      
+
     }
-    
+
   }
-  
+
   &[data-show-view='questions-day']{
     section[data-view='questions-day']{
       display: block;
     }
   }
-  
+
   &[data-show-view='questions-thanks']{
     section[data-view='questions-thanks']{
       display: block;
     }
   }
-  
+
   &[data-show-view='questions-finished']{
     section[data-view='questions-finished']{
       display: block;
-      
+
       .title {
         width: 100%;
         h1,h2{
           text-align: center;
         }
-        
+
         h1 {
           font-size: 2.6em;
           margin-bottom: -10px;
         }
-        
+
         h2 {
           font-size: 1.3em;
           line-height: 1.5em;
         }
       }
-      
+
       .cta {
         a.cyl-btn {
           margin-top: 20px;
         }
       }
-      
+
       [data-state]{
         text-align: center;
         img {
           margin-bottom: 40px;
           height: 200px;
-          
+
           @include bp(tablet){
             height: 280px;
           }
         }
       }
-      
-      
-      
+
+
+
       &[data-show-state='email']{
         [data-state='email']{
           display:block;
         }
-        
+
         img {
           height: 160px;
-          
+
           @include bp(tablet){
             height: 210px;
           }
         }
-        
+
         padding-top: 14vh;
-        
+
         @include bp(tablet){
           padding-top: 15vh;
         }
       }
-      
+
       &[data-show-state='no-email']{
         [data-state='no-email']{
           display:block;
         }
-        
+
         padding-top: 12vh;
-        
+
         @include bp(tablet){
           padding-top: 12vh;
         }
       }
-      
+
     }
   }
-  
-  
-  
+
+
+
   &[data-show-view='cyl']{
     section[data-view='cyl']{
       display: block;
-      
+
+      .content {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        left: 0;
+        top: 0;
+
+        .top-bar {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 40px;
+          // background-color: blue;
+          padding: 4px;
+
+          .milestone {
+            width: 40px;
+            height: 40px;
+            float: left;
+            //background-color: red;
+
+            &.morning {
+              background: url('/assets/svg/cyl-top-morning.svg' ) 100% 100% no-repeat;
+              background-position: center center;
+            }
+
+            &.noon {
+              background: url('/assets/svg/cyl-top-noon.svg' ) 100% 100% no-repeat;
+              background-position: center center;
+            }
+
+            &.night {
+              background: url('/assets/svg/cyl-top-night.svg' ) 100% 100% no-repeat;
+              background-position: center center;
+            }
+          }
+
+          .trail{
+            width: calc(50% - 60px);
+            height: 40px;
+            float: left;
+            //background-color: blue;
+            text-align: center;
+            overflow: hidden;
+            .dot {
+              display: inline-block;
+              float: center;
+              width: 28px;
+              height: 40px;
+              background: url('/assets/svg/cyl-top-dot.svg' )no-repeat;
+              background-size: 76% 76%;
+              background-position: center center;
+
+              &.filled {
+                background: url('/assets/svg/cyl-top-dot-filled.svg' )no-repeat;
+                background-size: 76% 76%;
+                background-position: center center;
+              }
+
+              @include bp(tablet){
+                width: 40px;
+                height: 40px;
+                background: url('/assets/svg/cyl-top-dot.svg' ) 80% 80% no-repeat;
+                background-position: center center;
+                &.filled {
+                  background: url('/assets/svg/cyl-top-dot-filled.svg' ) 80% 80% no-repeat;
+                  background-position: center center;
+                }
+              }
+
+            }
+
+          }
+        }
+
+      }
+
       &[data-show-modal='play-composition']{
         [data-modal-full='play-composition']{
-          
+
           display: block;
           text-align: center;
           padding-top: 10vh;
-          
+
           h1 {
             font-size: 2.6em;
           }
-          
+
           h2 {
             font-size: 1.7em;
             line-height: 1.3em;
           }
-          
+
           .cta {
             margin-top: 40px;
           }
-          
+
           img {
             height: 190px;
             margin-bottom: 16px;
           }
-          
+
           @include bp(tablet){
             padding-top: 10vh;
-            
+
             h1 {
               font-size: 5em;
             }
             h2 {
               font-size: 3em;
             }
-            
+
             .cta {
               margin-top: 30px;
             }
           }
         }
       }
-      
+
       &[data-show-modal='get-started']{
         [data-modal-full='get-started']{
           display: block;
           text-align: center;
-          
+
           &[data-show-state='start']{
             [data-state='start']{
               display: block;
               padding-top: 12vh;
-              
+
               img {
                 width: 94%;
                 display: inline-block;
                 margin-bottom: 10px;
               }
-              
+
               p {
                 margin-top: 20px;
                 font-size: 1.9em;
                 font-weight: 100;
               }
-              
+
               @include bp(tablet){
                 img {
                   width: 46%;
                 }
-                
+
                 p {
                   font-size: 3.2em;
                 }
               }
-              
+
             }
           }
-          
+
           &[data-show-state='walkthrough']{
             [data-state='walkthrough']{
               display: block;
             }
           }
-          
+
           &[data-show-state='ready']{
             [data-state='ready']{
               display: block;
@@ -699,54 +833,61 @@ main {
                 display: inline-block;
                 margin-bottom: 14px;
               }
-              
+
               p {
                 font-size: 2.4em;
                 line-height: 1.2em;
               }
-              
+
               @include bp(tablet){
                 padding-top: 12vh;
-                
+
                 img {
                   width: 38%;
                   max-width: 480px;
                   margin-left: -20px;
                 }
-                
+
                 p {
                   font-size: 6em;
                 }
               }
-              
-              
+
+
             }
           }
-          
+
           p {
             font-size: 1.8em;
           }
-          
+
           .cta {
             margin-top: 30px;
           }
         }
       }
-      
+
     }
-    
+
     a.cyl-logo {
       position: absolute;
       bottom: 20px;
       left: 30px;
+      img {
+        height: 26px;
+
+        @include bp(tablet){
+          height: auto;
+        }
+      }
     }
-    
-    
-    
+
+
+
   }
-  
-  
-  
+
+
+
 } /* [data-page='home'] */
 
 html.touch {
@@ -756,7 +897,8 @@ html.touch {
 }
 
 body {
-  &[data-show-modal]{
+  &[data-show-modal],
+  &[data-show-footer]{
     overflow: auto;
     width: auto;
     height: auto;
@@ -767,10 +909,169 @@ body {
       position: fixed;
     }
   }
-  
+
+  &[data-show-view='splash'],
+  &[data-show-view='cyl-complete'] {
+    overflow: auto;
+    width: auto;
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+
+    footer {
+      display: block;
+    }
+  }
+
   &[data-show-modal='terms-conditions']{
     section[data-modal='terms-conditions']{
       display: block;
     }
   }
+}
+
+
+
+body {
+  #grid-container {
+    //transform: scale(0.5,0.5) translate(100px, 100px);
+    //transform-origin: 0 0;
+    //width:920px;
+    height: 100%;
+    //width: 400px;
+  }
+  /*
+  #grid-container .hexagon:nth-of-type(6n+1) {
+      clear:left;
+  }
+  */
+  #grid-container .grid-item {
+
+  }
+
+  #grid-container .grid-item .grid-hexagon {
+
+  }
+  #grid-container .grid-item .grid-hexagon img {
+    transform:rotate(-45deg) skew(0,0) scale(1.4,0.77) ;
+    //transform:rotate(-45deg);
+  }
+
+  #grid-container .grid-item:nth-child(odd) {
+    margin-bottom:2px;
+  }
+  #grid-container .grid-item:nth-child(even) {
+    margin-bottom:-179px;
+  }
+
+  #grid-container img.item {
+    vertical-align:top;
+    //border:solid;
+    width: 100%;
+    height: 100%;
+  }
+
+  #grid-container {
+    padding-left: 30px;
+    width: 3000px;
+    .grid-column {
+      padding-top: 16vh;
+      height: inherit;
+      width: 20vh;
+      height: 100%;
+      float: left;
+
+      &:not(:first-child){
+        margin-left: calc(-3.4vh - 1px);
+      }
+
+      &:nth-child(odd){
+        margin-top: calc(9.5vh + 2px);
+      }
+
+      $h: 19vh;
+      $w: 21vh;
+      position: relative;
+
+      .grid-item {
+        float: left;
+        position: absolute !important;
+        left: 0;
+        //margin:3px 0;
+        //margin-bottom: 4px;
+        height:$h;
+        width:$w;
+
+        position:relative;
+        overflow:hidden;
+        display:inline-block;
+        margin-right:-51px;
+        vertical-align:middle;
+        opacity: .8;
+        &:hover{
+          opacity: 1;
+        }
+
+        img.hex {
+          position: absolute;
+          //z-index: 10;
+          z-index: 0;
+          width: 100%;
+          height: 100%;
+          position: relative;
+          // left: -1px;
+          // top: -1px;
+        }
+
+        .grid-hexagon{
+          overflow:hidden;
+          position:absolute;
+          height:$h*1.1;
+          width:$w*1;
+          top:-5%;
+          left:0;
+          z-index: 2;
+          //box-shadow: inset 0 0 0 3px;
+          //background:blue;
+          transform:rotate(45.5deg) skew(16.5deg,15.5deg);
+        }
+
+        $mt: 20vh;
+
+        &:nth-child(0n+1){
+          margin-top: $mt;
+          top: 6px;
+          //top: 35vh;
+        }
+
+        &:nth-child(0n+2){
+          margin-top: $mt;
+          top: calc(19.6vh + 6px);
+          //top: 35vh;
+        }
+        &:nth-child(0n+3){
+          margin-top: $mt;
+          top: calc(39.2vh + 6px);
+          //top: 55vh;
+        }
+
+        @include bp(tablet){
+          $mt: 14vh;
+
+          &:nth-child(0n+1){
+            margin-top: $mt;
+          }
+
+          &:nth-child(0n+2){
+            margin-top: $mt;
+          }
+          &:nth-child(0n+3){
+            margin-top: $mt;
+          }
+        }
+
+      }
+    }
+  }
+
 }
